--- a/WebMVCHelp/WebMVCHelp.csproj
+++ b/WebMVCHelp/WebMVCHelp.csproj
@@ -276,6 +276,7 @@
     <Content Include="Views\Credits\Create.cshtml" />
     <Content Include="Views\Credits\Edit.cshtml" />
     <Content Include="Views\Credits\Delete.cshtml" />
+    <Content Include="Views\Home\Sexo.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
