--- a/WebMVCHelp.Models/WebMVCHelp.Models.csproj
+++ b/WebMVCHelp.Models/WebMVCHelp.Models.csproj
@@ -42,7 +42,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Credit.cs" />
+    <Compile Include="Peoples.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Sexo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
